--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,21 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^3.0.3
   google_fonts: ^6.3.2
-
+  google_maps_flutter: ^2.13.1
+  permission_handler: ^12.0.1
+  flutter_map: ^8.2.2
+  latlong2: ^0.9.1
+  firebase_core: ^4.2.0
+  firebase_auth: ^6.1.1
+  firebase_storage: ^13.0.3
+  location: ^8.0.1
+  geocoding: ^4.0.0
+  geolocator: ^14.0.1
+  cloud_firestore: ^6.1.0
+  firebase_messaging: ^16.0.4
+  flutter_local_notifications: ^19.5.0
+  intl: ^0.20.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
