--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,60 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# -------------------------------
+# Flutter / Dart
+# -------------------------------
 .dart_tool/
+.flutter-plugins
 .flutter-plugins-dependencies
+.packages
 .pub-cache/
 .pub/
-/build/
-/coverage/
+build/
+coverage/
+**/doc/api/
+**/ios/Flutter/.last_build_id
 
-# Symbolication related
-app.*.symbols
-
-# Obfuscation related
-app.*.map.json
-
-# Android Studio will place build artifacts here
+# -------------------------------
+# Android / iOS build outputs
+# -------------------------------
+*.apk
+*.aab
+*.app
+*.ipa
 /android/app/debug
 /android/app/profile
 /android/app/release
+ios/Flutter/Flutter.framework/
+ios/Flutter/Flutter.podspec
+
+# -------------------------------
+# IDE and OS files
+# -------------------------------
+.idea/
+.vscode/
+*.iml
+*.ipr
+*.iws
+.DS_Store
+*.log
+*.swp
+Thumbs.db
+.history
+
+# -------------------------------
+# Node.js (for fcm_server)
+# -------------------------------
+fcm_server/node_modules/
+fcm_server/package-lock.json
+fcm_server/.env
+fcm_server/.cache/
+
+# 🚫 VERY IMPORTANT:
+# Prevent Firebase credentials from ever being pushed
+fcm_server/serviceAccountKey.json
+
+# -------------------------------
+# Miscellaneous
+# -------------------------------
+*.class
+*.pyc
+*.pyo
+*.swp
