--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   google_fonts: ^6.3.2
   google_maps_flutter: ^2.13.1
   permission_handler: ^12.0.1
-  flutter_map: ^8.2.2
   latlong2: ^0.9.1
   firebase_core: ^4.2.0
   firebase_auth: ^6.1.1
@@ -74,10 +73,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/map_style.json
+    - assets/dis.bmp
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
