--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,15 @@ dependencies:
   firebase_messaging: ^16.0.4
   flutter_local_notifications: ^19.5.0
   intl: ^0.20.2
-  
+  flutter_launcher_icons: ^0.14.4
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/logo.png"
+  min_sdk_android: 24 # android min sdk min:16, default 21
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/logo.png"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -76,6 +84,7 @@ flutter:
   assets:
     - assets/map_style.json
     - assets/dis.bmp
+    - assets/logo.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
